--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "weave>=0.51.54",
     "arize-phoenix>=11.2.0",
+    "openinference-instrumentation-openai-agents>=0.1.14",
 ]
