feat: Add data management script and update docs
This commit introduces a robust data management workflow to improve testing and development.

- Adds a 'manage.py' script with 'reset' and 'seed' commands, enabling repeatable state management for tests and evaluations.

- Includes a default 'seed_todos.json' file to provide a consistent starting point.

- Updates 'README.md' to document the new project structure and management commands.

- Adds 'typer' dependency for creating the CLI.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "weave>=0.51.54",
     "arize-phoenix>=11.2.0",
     "openinference-instrumentation-openai-agents>=0.1.14",
+    "typer[all]>=0.16.0",
 ]
