Enhanced test framework with structured logging, validation, and Pydantic fixes
Major improvements to the test infrastructure:

🔧 Fixed Pydantic Warnings:
- Removed Field(...) and Field(default=None) annotations from agent tools
- Switched to docstring-based parameter descriptions (Google-style)
- Eliminated PydanticJsonSchemaWarning messages completely
- Removed warning filters from main.py and test files

📊 Enhanced Test Logging & Reporting:
- Added structured logging to both test files (tests/logs/test_results.jsonl)
- Created comprehensive test report generation (tests/logs/test_report.md)
- Added test suite logging with pass/fail rates and timing
- Enhanced run_demo_tests.py with better reporting and parallel execution

🔄 Improved Data Management:
- Each test now handles its own data reset for clean slate execution
- Added explicit data reset functions to individual test files
- Updated .gitignore to exclude test logs directory
- Documented data management behavior in tests/README.md

✅ Enhanced Test Validation:
- Added comprehensive validation thresholds for both tests
- Improved boolean logic for completed todo checking (explicit == True/False)
- Added detailed validation results logging with error tracking
- Fixed basic operations test to account for completion→deletion workflow

📚 Updated Documentation:
- Enhanced tests/README.md with logging, data management, and validation info
- Added clear explanations of test behavior and data lifecycle
- Documented new command-line options and report generation

🎯 Test Variety Improvements:
- Basic operations test now has better multi-tool workflow variety
- Web search demo has more guided multi-turn tool interactions
- Both tests demonstrate different tool usage patterns effectively

These changes provide a robust, production-ready test framework with proper
logging, validation, and documentation for the todo-agent project.

--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,8 @@ cython_debug/
 data/todos.json
 data/session_default.json
 
+# Test logs and reports
+tests/logs/
+
 # Cursor editor files
 .cursor/
