feat(gradio): Refine UI and fix storage warnings
- Replaced emoji status indicators with plain text to resolve rendering issues.
- Adjusted column widths for better readability.
- Implemented explicit string-to-enum conversion in the storage layer to silence Pydantic serialization warnings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "arize-phoenix>=11.2.0",
     "openinference-instrumentation-openai-agents>=0.1.14",
     "typer[all]>=0.16.0",
+    "gradio>=5.35.0",
+    "pandas>=2.3.0",
 ]
